--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,17 +10,17 @@ interface Props {
 const { title, image, body, altImg } = Astro.props;
 ---
 
-<li class="link-card">
-  <a>
-    <h2>
+<div class="link-card">
+  <div class="card-item">
+    <h3>
       {title}
-    </h2>
-    <Image src={image} alt={altImg} class="card-image" />
+    </h3>
+    <Image src={image} alt={altImg} class="card-image" loading="lazy" />
     <p>
       {body}
     </p>
-  </a>
-</li>
+  </div>
+</div>
 <style>
   .link-card {
     list-style: none;
@@ -31,39 +31,33 @@ const { title, image, body, altImg } = Astro.props;
     background-size: 400%;
     border-radius: 7px;
     background-position: 100%;
-    transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
   }
-  .link-card > a {
+  .link-card > .card-item {
     width: 100%;
-    text-decoration: none;
     line-height: 1.4;
     padding: calc(1.5rem - 1px);
-    border-radius: 8px;
     color: white;
     opacity: 0.8;
   }
-  h2 {
+  h3 {
     margin: 0;
-    font-size: 1.25rem;
-    transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+    font-size: 1.5rem;
     text-align: center;
     padding: 1rem;
+	color: rgb(var(--accent));
+	transition: all 0.3s;
   }
   p {
     margin-top: 0.5rem;
     margin-bottom: 0;
-  }
-  .link-card:is(:hover, :focus-within) {
-    background-position: 0;
-    background-image: var(--accent-gradient);
-  }
-  .link-card:is(:hover, :focus-within) h2 {
-    color: rgb(var(--accent-light));
   }
   .card-image {
     width: 100%;
     height: 300px;
     object-fit: cover;
     border-radius: 8px;
+  }
+  .link-card:is(:hover, :focus-within) h3 {
+    color: white;
   }
 </style>
