change style of description

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -44,12 +44,16 @@ const { title, image, body, altImg } = Astro.props;
     font-size: 1.5rem;
     text-align: center;
     padding: 1rem;
-	color: rgb(var(--accent));
-	transition: all 0.3s;
+    color: rgb(var(--accent));
+    transition: all 0.3s;
   }
   p {
     margin-top: 0.5rem;
     margin-bottom: 0;
+    font-size: 1rem;
+    text-align: center;
+    color: white;
+    opacity: 0.8;
   }
   .card-image {
     width: 100%;
