--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ import Card from "../components/Card.astro";
               class="btn"
             >
               <span class="btn-wrapper">
-                <span class="icon">
+                <span>
                   <Icon name="tabler:phone" class="icon" />
                 </span>
                 <span>Contactanos por whatsapp!</span>
@@ -118,7 +118,7 @@ import Card from "../components/Card.astro";
           class="btn"
         >
           <span class="btn-wrapper">
-            <span class="icon">
+            <span>
               <Icon name="tabler:phone" class="icon" />
             </span>
             <span>Contactanos por whatsapp!</span>
@@ -224,7 +224,7 @@ import Card from "../components/Card.astro";
         margin-top: 2rem;
       }
       .btn {
-        padding: 0.5rem 2rem;
+        padding: 0.5rem 1rem;
         background-color: #25d366;
         color: white;
         border: none;
@@ -235,6 +235,7 @@ import Card from "../components/Card.astro";
         cursor: pointer;
         transition: background 0.2s;
         text-decoration: none;
+		text-align: center;
       }
       .btn-wrapper {
         display: flex;
@@ -243,8 +244,6 @@ import Card from "../components/Card.astro";
       }
       .icon {
         margin-right: 0.5rem;
-      }
-      .icon {
         display: flex;
         align-items: center;
         justify-content: center;
