fix instructions aling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Card from "../components/Card.astro";
         <div>
           <Image
             src={localHeroImage}
-            alt="retroexcavadora cursos en bogota"
+            alt="retroexcavadora cursos en bogotá y cundinamarca"
             class="image"
             loading="lazy"
           />
@@ -84,25 +84,25 @@ import Card from "../components/Card.astro";
           title="Retroexcavadora de llantas"
           image={localRetroLlantasImage}
           altImg="retroexcavadora de llantas"
-          body="Curso especializado en retroexcavadora de llantas en bogota y cundinamarca con maquinaria real y practicas en campo real."
+          body="Curso especializado en retroexcavadora de llantas en bogotá y cundinamarca con maquinaria real y practicas en campo real."
         />
         <Card
           title="Retroexcavadora de oruga"
           image={localRetroImage}
           altImg="retroexcavadora de oruga"
-          body="Curso especializado en retroexcavadora de oruga en bogota y cundinamarca con maquinaria real y practicas en campo real."
+          body="Curso especializado en retroexcavadora de oruga en bogotá y cundinamarca con maquinaria real y practicas en campo real."
         />
         <Card
           title="Cargador frontal"
           image={localCargadorFrontalImage}
           altImg="cargador frontal"
-          body="Curso especializado en cargador frontal en bogota y cundinamarca con maquinaria real y practicas en campo real."
+          body="Curso especializado en cargador frontal en bogotá y cundinamarca con maquinaria real y practicas en campo real."
         />
         <Card
           title="Mini-cargador"
           image={localMiniCargadorImage}
           altImg="mini-cargador"
-          body="Curso especializado en mini-cargador en bogota y cundinamarca con maquinaria real y practicas en campo real."
+          body="Curso especializado en mini-cargador en bogotá y cundinamarca con maquinaria real y practicas en campo real."
         />
       </div>
     </section>
@@ -182,6 +182,7 @@ import Card from "../components/Card.astro";
       }
       .instructions {
         font-size: 1rem;
+		text-align: center;
         margin-bottom: 2rem;
         border: 1px solid rgba(var(--accent-light), 50%);
         background: linear-gradient(
