--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,7 @@ import Card from "../components/Card.astro";
             src={localHeroImage}
             alt="retroexcavadora cursos en bogotá y cundinamarca"
             class="image"
+			loading="eager"
           />
         </div>
 
