add widths for hero image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,8 @@ import Card from "../components/Card.astro";
             src={localHeroImage}
             alt="retroexcavadora cursos en bogotá y cundinamarca"
             class="image"
-			loading="eager"
+            loading="eager"
+            widths={[240, 540, 720, localHeroImage.width]}
           />
         </div>
 
