add sizes for image viewports

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,7 @@ import Card from "../components/Card.astro";
             class="image"
             loading="eager"
             widths={[240, 540, 720, localHeroImage.width]}
+            sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${localHeroImage.width}px`}
           />
         </div>
 
