revert changes of aspect ratio

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -18,7 +18,7 @@ const { title, image, body, altImg } = Astro.props;
     <Image
       src={image}
       alt={altImg}
-      class="w-full aspect-auto rounded-lg"
+      class="w-full rounded-lg"
       loading="lazy"
     />
     <p>
