--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,8 +29,10 @@ import Card from "../components/Card.astro";
           <Image
             src={localHeroImage}
             alt="retroexcavadora cursos en bogotá y cundinamarca"
-            class="w-full aspect-auto md:aspect-square"
+            class="image"
             loading="eager"
+            widths={[240, 540, 720, localHeroImage.width]}
+			sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${localHeroImage.width}px`}
           />
         </div>
 
