--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,87 +1,95 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import { Icon } from "astro-icon/components";
 import localHeroImage from "../assets/images/hero.webp";
 import localRetroImage from "../assets/images/retro.webp";
 import localRetroLlantasImage from "../assets/images/retro-llantas.webp";
 import localCargadorFrontalImage from "../assets/images/cargador-frontal.webp";
 import localMiniCargadorImage from "../assets/images/mini-cargador.webp";
 import Card from "../components/Card.astro";
+import WhatsappButton from "../components/WhatsappButton.astro";
 ---
 
 <Layout title="Cursos de maquinaria pesada | CEMAQUI">
-  <main>
-    <h1>
+  <main class="w-3/4 m-auto">
+    <h1
+      class="text-2xl lg:text-4xl text-center text-white uppercase font-bold animate-fade-down"
+    >
       Todo lo que necesitas para formarte como un operador de <span
-        class="text-gradient">Maquinaria Pesada</span
+        class="bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
+        >Maquinaria Pesada</span
       >
     </h1>
-    <p class="instructions">
+    <p
+      class="text-white text-sm md:text-lg text-center p-3 mb-5 font-semibold leading-6"
+    >
       Si estas interesado en aplicar a diversos trabajos del sector construcción
-      este programa es para ti. El centro de enseñanza para operadores de
-      maquinaria pesada con + 10 años de experiencia te llevara de cero a ser un
-      operador completamente capacitado
+      este programa es para ti. <span class="hidden sm:inline-block"
+        >El centro de enseñanza para operadores de maquinaria pesada con + 10
+        años de experiencia te llevara de cero a ser un operador completamente
+        capacitado</span
+      >
     </p>
-    <section id="hero">
-      <div class="grid">
-        <div>
-          <Image
-            src={localHeroImage}
-            alt="retroexcavadora cursos en bogotá y cundinamarca"
-            class="image"
-            loading="eager"
-            widths={[240, 540, 720, localHeroImage.width]}
-			sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${localHeroImage.width}px`}
-          />
-        </div>
-
-        <div>
-          <h2 class="h2">
-            ¿Que beneficios tendras al elegir nuestro programa?
-          </h2>
-          <ul class="ul-list">
-            <li>
-              Certificado como operador multiple en (retro de llantas, retro de
-              oruga, cargador frontal y mini-cargador).
-            </li>
-            <li>Realizaras las practicas en campo real con maquinaria real.</li>
-            <li>
-              Programa personalizado (la maquinaria y el instructor estarán
-              disponibles solo para ti en el proceso).
-            </li>
-            <li>
-              Programa intensivo (la duración del programa es de 8 dias con una
-              intensidad diaria de 8 horas practicas).
-            </li>
-            <li>
-              Recibirás carnet y certificado legal que te acredita como operador
-              (se podra validar y descargar en nuestro sitio web).
-            </li>
-          </ul>
-          <div class="btn-container animate-bounce">
-            <a
-              href="https://api.whatsapp.com/send?phone=573103134073&text=Hola!%20Me%20interesa%20recibir%20mas%20informaci%C3%B3n%20sobre%20el%20programa%20como%20operador%20de%20maquinaria%20pesada"
-              class="btn"
+    <section id="hero" class="mb-4">
+      <div class="w-full">
+        <div class="grid lg:grid-cols-2 grid-cols-1 gap-6">
+          <div>
+            <Image
+              src={localHeroImage}
+              alt="retroexcavadora cursos en bogotá y cundinamarca"
+              class="rounded-md animate-fade"
+              loading="eager"
+              widths={[240, 540, 720, localHeroImage.width]}
+              sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${localHeroImage.width}px`}
+            />
+          </div>
+          <div class="flex flex-col justify-evenly">
+            <h2
+              class="text-primary text-center font-bold uppercase text-lg md:text-2xl mb-3 leading-6 animate-fade-left"
             >
-              <span class="btn-wrapper">
-                <span>
-                  <Icon name="tabler:phone" class="icon" />
-                </span>
-                <span>Contactanos por whatsapp!</span>
-              </span>
-            </a>
+              ¿Que beneficios tendras al elegir nuestro programa?
+            </h2>
+            <div>
+              <ul class="text-white list-circle p-5 animate-fade-up">
+                <li class="text-left mb-4">
+                  Certificado como operador multiple en (retro de llantas, retro
+                  de oruga, cargador frontal y mini-cargador).
+                </li>
+                <li class="text-left mb-4">
+                  Realizaras las practicas en campo real con maquinaria real.
+                </li>
+                <li class="text-left mb-4">
+                  Programa personalizado (la maquinaria y el instructor estarán
+                  disponibles solo para ti en el proceso).
+                </li>
+                <li class="text-left mb-4">
+                  Programa intensivo (la duración del programa es de 8 dias con
+                  una intensidad diaria de 8 horas practicas).
+                </li>
+                <li class="text-left mb-4">
+                  Recibirás carnet y certificado legal que te acredita como
+                  operador (se podra validar y descargar en nuestro sitio web).
+                </li>
+              </ul>
+            </div>
+            <WhatsappButton className="animation-bounce" />
           </div>
         </div>
       </div>
     </section>
-    <section id="cursos">
-      <h2 class="h2">¿Necesitas especializarte en una sola maquina?</h2>
-      <p class="subtitle">
+    <section id="cursos" class="mb-4">
+      <h2
+        class="text-primary text-center text-lg md:text-3xl uppercase font-bold leading-6"
+      >
+        ¿Necesitas especializarte en una sola maquina?
+      </h2>
+      <p
+        class="w-full text-white text-center text-base md:text-lg p-3 font-medium mb-4"
+      >
         Si estas interesado en especializarte en una sola maquina, tenemos
         cursos especializados en:
       </p>
-      <div class="courses-container">
+      <div class="grid md:grid-cols-2 gap-3">
         <Card
           title="Retroexcavadora de llantas"
           image={localRetroLlantasImage}
@@ -109,180 +117,25 @@ import Card from "../components/Card.astro";
       </div>
     </section>
     <section id="contacto">
-      <h2 class="h2">¿Listo para comenzar?</h2>
-      <p class="subtitle">
-        Si estas interesado en aplicar a nuestros programas de formación, no
-        dudes en contactarnos.
-      </p>
-      <div class="btn-container animate-pulse">
-        <a
-          href="https://api.whatsapp.com/send?phone=573103134073&text=Hola!%20Me%20interesa%20recibir%20mas%20informaci%C3%B3n%20sobre%20el%20programa%20como%20operador%20de%20maquinaria%20pesada"
-          class="btn"
-        >
-          <span class="btn-wrapper">
-            <span>
-              <Icon name="tabler:phone" class="icon" />
-            </span>
-            <span>Contactanos por whatsapp!</span>
-          </span>
-        </a>
+      <h2
+        class="text-primary text-center font-bold uppercase text-lg md:text-2xl mb-3 leading-6"
+      >
+        ¿Listo para comenzar?
+      </h2>
+      <div class="grid lg:grid-cols-2 grid-cols-1 gap-6">
+        <div>
+          <p
+            class="text-white text-center text-base md:text-lg p-3 font-medium mb-4"
+          >
+            Si estas interesado en aplicar a nuestros programas de formación, no
+            dudes en contactarnos.
+          </p>
+        </div>
+        <WhatsappButton className="pulse" />
       </div>
     </section>
-    <p class="copyright">CEMAQUI © 2024 Todos los derechos reservados.</p>
-
-    <style>
-      main {
-        margin: auto;
-        padding: 1rem;
-        width: 1000px;
-        max-width: calc(100% - 2rem);
-        color: white;
-        font-size: 20px;
-        line-height: 1.6;
-      }
-      .astro-a {
-        position: absolute;
-        top: -32px;
-        left: 50%;
-        transform: translatex(-50%);
-        width: 220px;
-        height: auto;
-        z-index: -1;
-      }
-      h1 {
-        font-size: 2rem;
-        font-weight: 700;
-        line-height: 1;
-        text-align: center;
-        margin-bottom: 1em;
-        text-transform: uppercase;
-      }
-      h2 {
-        font-size: 1.5rem;
-        color: rgb(var(--accent));
-        font-weight: 700;
-        line-height: 1;
-        text-align: center;
-        margin-bottom: 1em;
-        text-transform: uppercase;
-      }
-      section {
-        margin-bottom: 2rem;
-      }
-      .image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-      }
-      .text-gradient {
-        background-image: var(--accent-gradient);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        text-transform: uppercase;
-        background-size: 400%;
-        background-position: 0%;
-      }
-      .instructions {
-        font-size: 1rem;
-        text-align: center;
-        margin-bottom: 2rem;
-        border: 1px solid rgba(var(--accent-light), 50%);
-        background: linear-gradient(
-          rgba(var(--accent-dark), 66%),
-          rgba(var(--accent-dark), 33%)
-        );
-        padding: 1rem;
-        border-radius: 8px;
-      }
-      .instructions code {
-        font-size: 0.8em;
-        font-weight: bold;
-        background: rgba(var(--accent-light), 12%);
-        color: rgb(var(--accent-light));
-        border-radius: 4px;
-        padding: 0.3em 0.4em;
-      }
-      .instructions strong {
-        color: rgb(var(--accent-light));
-      }
-      .ul-list {
-        list-style-type: circle;
-        text-align: justify;
-      }
-      .ul-list li {
-        margin-bottom: 1rem;
-        font-size: 1rem;
-        text-align: left;
-        font-weight: 500;
-      }
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
-        gap: 2rem;
-        padding: 0;
-      }
-      .btn-container {
-        display: flex;
-        justify-content: center;
-        margin-top: 2rem;
-      }
-      .btn {
-        padding: 0.5rem 1rem;
-        background-color: #25d366;
-        color: black;
-        border: none;
-        border-radius: 4px;
-        font-size: 1rem;
-        font-weight: 700;
-        text-transform: uppercase;
-        cursor: pointer;
-        transition: background 0.2s;
-        text-decoration: none;
-        text-align: center;
-      }
-      .btn-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .icon {
-        margin-right: 0.5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: xx-large;
-      }
-      .subtitle {
-        font-size: 1.2rem;
-        font-weight: 500;
-        margin-bottom: 1rem;
-        text-align: center;
-      }
-      .courses-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(30ch, 1fr));
-        gap: 2rem;
-        padding: 0;
-      }
-      .course-card {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 1rem;
-        border-radius: 8px;
-        background: rgba(var(--accent-dark), 2%);
-      }
-      .course-image {
-        width: 100%;
-        height: auto;
-        border-radius: 8px;
-      }
-      .copyright {
-        font-size: 0.8rem;
-        text-align: center;
-        margin-top: 2rem;
-      }
-    </style>
+    <p class="text-white text-center p-3">
+      CEMAQUI © 2024 Todos los derechos reservados.
+    </p>
   </main>
 </Layout>
