--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,52 +10,23 @@ interface Props {
 const { title, image, body, altImg } = Astro.props;
 ---
 
-<div class="link-card">
-  <div class="card-item">
-    <h3>
+<div class="p-1">
+  <div>
+    <h3
+      class="text-primary text-center text-xl md:text-2xl p-3 mb-2 font-semibold animate-fade-down"
+    >
       {title}
     </h3>
     <Image
       src={image}
       alt={altImg}
-      class="w-full rounded-lg"
+      class="rounded-lg"
+      widths={[240, 540, 720, image.width]}
+      sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${image.width}px`}
       loading="lazy"
     />
-    <p>
+    <p class="text-white text-center p-3 text-sm md:text-lg opacity-80">
       {body}
     </p>
   </div>
 </div>
-<style>
-  .link-card {
-    list-style: none;
-    display: flex;
-    padding: 1px;
-  }
-  .link-card > .card-item {
-    width: 100%;
-    line-height: 1.4;
-    padding: calc(1.5rem - 1px);
-    color: white;
-    opacity: 0.8;
-  }
-  h3 {
-    margin: 0;
-    font-size: 1.5rem;
-    text-align: center;
-    padding: 1rem;
-    color: rgb(var(--accent));
-    transition: all 0.3s;
-  }
-  p {
-    margin-top: 0.5rem;
-    margin-bottom: 0;
-    font-size: 1rem;
-    text-align: center;
-    color: white;
-    opacity: 0.8;
-  }
-  .link-card:is(:hover, :focus-within) h3 {
-    color: white;
-  }
-</style>
