--- a/src/components/WhatsappButton.astro
+++ b/src/components/WhatsappButton.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon/components";
 <div class="w-full justify-center my-4 animate-pulse">
   <a
     href="https://api.whatsapp.com/send?phone=573103134073&text=Hola!%20Me%20interesa%20recibir%20mas%20informaci%C3%B3n%20sobre%20el%20programa%20como%20operador%20de%20maquinaria%20pesada"
-    class="flex justify-center bg-whatsapp text-black items-center p-3 rounded-md w-full"
+    class="flex justify-center bg-whatsapp text-white items-center p-3 rounded-md w-full"
   >
     <span class="flex">
       <span>
