change size for description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import WhatsappButton from "../components/WhatsappButton.astro";
       >
     </h1>
     <p
-      class="text-white text-sm md:text-lg text-center p-3 mb-5 font-semibold leading-6"
+      class="text-white text-base text-center p-3 mb-5 leading-6"
     >
       Si estas interesado en aplicar a diversos trabajos del sector construcción
       este programa es para ti. <span class="hidden sm:inline-block"
