--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,7 +10,7 @@ interface Props {
 const { title, image, body, altImg } = Astro.props;
 ---
 
-<div class="p-1">
+<div class="p-1 aspect-auto">
   <div>
     <h3
       class="text-primary text-center text-xl md:text-2xl p-3 mb-2 font-semibold animate-fade-down"
@@ -21,8 +21,7 @@ const { title, image, body, altImg } = Astro.props;
       src={image}
       alt={altImg}
       class="rounded-lg"
-      widths={[240, 540, 720, image.width]}
-      sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${image.width}px`}
+
       loading="lazy"
     />
     <p class="text-white text-center p-3 text-sm md:text-lg opacity-80">
