--- a/src/components/WhatsappButton.astro
+++ b/src/components/WhatsappButton.astro
@@ -9,9 +9,9 @@ import { Icon } from "astro-icon/components";
   >
     <span class="flex">
       <span>
-        <Icon name="tabler:phone" class="mr-2 text-2xl" />
+        <Icon name="tabler:phone" class="md:mr-2 text-lg md:text-2xl" />
       </span>
-      <span class="uppercase">contáctanos por whatsapp!</span>
+      <span class="uppercase text-xs md:text-lg text-center">contáctanos por whatsapp!</span>
     </span>
   </a>
 </div>
