--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,10 +37,8 @@ import WhatsappButton from "../components/WhatsappButton.astro";
             <Image
               src={localHeroImage}
               alt="retroexcavadora cursos en bogotá y cundinamarca"
-              class="rounded-md animate-fade"
+              class="rounded-md animate-fade aspect-auto"
               loading="eager"
-              widths={[240, 540, 720, localHeroImage.width]}
-              sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${localHeroImage.width}px`}
             />
           </div>
           <div class="flex flex-col justify-evenly">
