change mobile witdh for w-screen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import WhatsappButton from "../components/WhatsappButton.astro";
 ---
 
 <Layout title="Cursos de maquinaria pesada | CEMAQUI">
-  <main class="w-3/4 m-auto">
+  <main class="w-screen md:w-3/4 m-auto p-2">
     <h1
       class="text-2xl lg:text-4xl text-center text-white uppercase font-bold animate-fade-down"
     >
@@ -20,9 +20,7 @@ import WhatsappButton from "../components/WhatsappButton.astro";
         >Maquinaria Pesada</span
       >
     </h1>
-    <p
-      class="text-white text-base text-center p-3 mb-5 leading-6"
-    >
+    <p class="text-white text-base text-center p-3 mb-5 leading-6">
       Si estas interesado en aplicar a diversos trabajos del sector construcción
       este programa es para ti. <span class="hidden sm:inline-block"
         >El centro de enseñanza para operadores de maquinaria pesada con + 10
