fix responsive button in min-witdh sizes

--- a/src/components/WhatsappButton.astro
+++ b/src/components/WhatsappButton.astro
@@ -2,16 +2,18 @@
 import { Icon } from "astro-icon/components";
 ---
 
-<div class="w-full justify-center my-4 animate-bounce">
+<div class="w-3/4 m-auto my-4 animate-bounce inline-grid sm:inline">
   <a
     href="https://api.whatsapp.com/send?phone=573103134073&text=Hola!%20Me%20interesa%20recibir%20mas%20informaci%C3%B3n%20sobre%20el%20programa%20como%20operador%20de%20maquinaria%20pesada"
-    class="flex justify-center bg-whatsapp text-black items-center p-3 rounded-md w-full"
+    class="flex justify-center bg-whatsapp text-black items-center rounded-md py-3"
   >
-    <span class="flex">
+    <span class="flex items-center">
       <span>
-        <Icon name="tabler:phone" class="md:mr-2 text-lg md:text-2xl" />
+        <Icon name="tabler:phone" class="md:mr-1 text-lg md:text-2xl" />
       </span>
-      <span class="uppercase text-xs md:text-lg text-center">contáctanos por whatsapp!</span>
+      <span class="uppercase text-xs md:text-sm text-center font-semibold "
+        >contáctanos por whatsapp!</span
+      >
     </span>
   </a>
 </div>
