--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../assets/styles/tailwind.css";
+import SpeedInsights from "@vercel/speed-insights/astro";
 interface Props {
   title: string;
 }
@@ -36,6 +37,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <slot />
+    <SpeedInsights />
   </body>
 </html>
 <style is:global>
