--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import WhatsappButton from "../components/WhatsappButton.astro";
 ---
 
 <Layout title="Cursos de maquinaria pesada | CEMAQUI">
-  <main class="w-full md:w-3/4 m-auto p-2">
+  <main class="w-auto md:w-3/4 m-auto p-2">
     <h1
       class="text-2xl lg:text-4xl text-center text-white uppercase font-bold animate-fade-down"
     >
