add animation delay

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import WhatsappButton from "../components/WhatsappButton.astro";
         >Maquinaria Pesada</span
       >
     </h1>
-    <p class="text-white text-base text-center p-3 mb-5 leading-6 animate-fade-left">
+    <p class="text-white text-base text-center p-3 mb-5 leading-6 animate-fade-left animate-delay-200">
       Si estas interesado en aplicar a diversos trabajos del sector construcción
       este programa es para ti. <span class="hidden sm:inline-block"
         >El centro de enseñanza para operadores de maquinaria pesada con + 10
@@ -37,6 +37,8 @@ import WhatsappButton from "../components/WhatsappButton.astro";
               alt="retroexcavadora cursos en bogotá y cundinamarca"
               class="rounded-md animate-fade-down"
               loading="eager"
+              width={800}
+              height={600}
             />
             <!-- <Image
               src={localHeroImage}
@@ -45,9 +47,9 @@ import WhatsappButton from "../components/WhatsappButton.astro";
               loading="eager"
             /> -->
           </div>
-          <div class="flex flex-col justify-evenly">
+          <div class="flex flex-col justify-evenly animate-fade-left animate-delay-300">
             <h2
-              class="text-primary text-center font-bold uppercase text-lg md:text-2xl mb-3 leading-6 animate-fade-left"
+              class="text-primary text-center font-bold uppercase text-lg md:text-2xl mb-3 leading-6"
             >
               ¿Que beneficios tendras al elegir nuestro programa?
             </h2>
