--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import WhatsappButton from "../components/WhatsappButton.astro";
         >Maquinaria Pesada</span
       >
     </h1>
-    <p class="text-white text-base text-center p-3 mb-5 leading-6 animate-fade-left animate-delay-200">
+    <p class="text-white text-base text-center p-3 mb-5 leading-6 animate-fade-left">
       Si estas interesado en aplicar a diversos trabajos del sector construcción
       este programa es para ti. <span class="hidden sm:inline-block"
         >El centro de enseñanza para operadores de maquinaria pesada con + 10
@@ -40,14 +40,8 @@ import WhatsappButton from "../components/WhatsappButton.astro";
               width={800}
               height={600}
             />
-            <!-- <Image
-              src={localHeroImage}
-              alt="retroexcavadora cursos en bogotá y cundinamarca"
-              class="rounded-md animate-fade aspect-auto"
-              loading="eager"
-            /> -->
           </div>
-          <div class="flex flex-col justify-evenly animate-fade-left animate-delay-300">
+          <div class="flex flex-col justify-evenly animate-fade-left">
             <h2
               class="text-primary text-center font-bold uppercase text-lg md:text-2xl mb-3 leading-6"
             >
