--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import WhatsappButton from "../components/WhatsappButton.astro";
         >Maquinaria Pesada</span
       >
     </h1>
-    <p class="text-white text-base text-center p-3 mb-5 leading-6 animate-fade-left">
+    <p class="text-white text-base text-center p-3 mb-5 leading-6">
       Si estas interesado en aplicar a diversos trabajos del sector construcción
       este programa es para ti. <span class="hidden sm:inline-block"
         >El centro de enseñanza para operadores de maquinaria pesada con + 10
