--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image, Picture } from "astro:assets";
-import localHeroImage from "../assets/images/hero.webp";
-import localRetroImage from "../assets/images/retro.webp";
-import localRetroLlantasImage from "../assets/images/retro-llantas.webp";
-import localCargadorFrontalImage from "../assets/images/cargador-frontal.webp";
-import localMiniCargadorImage from "../assets/images/mini-cargador.webp";
+import localHeroImage from "../assets/images/main-hero.jpeg";
+import localRetroImage from "../assets/images/retro-oruga.jpeg";
+import localRetroLlantasImage from "../assets/images/retro-llantas.jpeg";
+import localCargadorFrontalImage from "../assets/images/cargador-frontal.jpeg";
+import localMiniCargadorImage from "../assets/images/mini-cargador.jpeg";
 import Card from "../components/Card.astro";
 import WhatsappButton from "../components/WhatsappButton.astro";
 ---
@@ -37,8 +37,9 @@ import WhatsappButton from "../components/WhatsappButton.astro";
               alt="retroexcavadora cursos en bogotá y cundinamarca"
               class="rounded-md animate-fade-down"
               loading="eager"
-              widths={[300, 600, 900, 1200, 1800]}
-              sizes="(max-width: 600px) 100vw, (max-width: 900px) 50vw, (max-width: 1200px) 33vw, 25vw"
+              widths={[240, 540, 720, localHeroImage.width]}
+              sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${localHeroImage.width}px`}
+              quality={70}
             />
           </div>
           <div class="flex flex-col justify-evenly animate-fade-left">
