--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -21,9 +21,9 @@ const { title, image, body, altImg } = Astro.props;
       src={image}
       alt={altImg}
       class="rounded-lg animate-fade-up"
-      width={500}
-      height={500}
       loading="lazy"
+      widths={[240, 540, 720, image.width]}
+      sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${image.width}px`}
     />
     <p class="text-white text-center p-3 text-sm md:text-lg opacity-80">
       {body}
