--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,6 +22,8 @@ const { title, image, body, altImg } = Astro.props;
       alt={altImg}
       class="rounded-lg animate-fade-up"
       loading="lazy"
+      width={500}
+      height={500}
       widths={[240, 540, 720, image.width]}
       sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${image.width}px`}
       quality={95}
